--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ footer {
 
 @media (max-width: 767px) {
   ul {
-    margin-left: 5%;
+    margin-left: 5% !important;
   }
   input {
     width: 80%;
