--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ footer {
 
 @media (max-width: 767px) {
   ul {
-    margin-left: 1% !important;
+    margin-left: 0.5% !important;
+    margin-right: 0.5% !important;
   }
   input {
     width: 80%;
