--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ footer {
 
 @media (max-width: 767px) {
   ul {
-    margin-left: 0.5% !important;
-    margin-right: 0.5% !important;
+    margin-left: 10px !important;
+    margin-right: 10px !important;
   }
   input {
     width: 80%;
