--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ footer {
 
 @media (max-width: 800px) {
   ul {
-    margin-left: 10px !important;
+    margin-left: 20px !important;
+    padding-left: 0 !important;
   }
   input {
     width: 80%;
