--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 * {
   text-align: center;
-  font-family: 'Noto Sans TC', Pretendard, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', 'Noto Sans TC', Pretendard, -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 300;
 }
 html {
@@ -53,7 +55,6 @@ footer {
   font-size: small;
   font-weight: 600;
   margin: 7px;
-  font-family: "Poppins";
 }
 
 @media (max-width: 800px) {
